<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.placelook.fragments.splash.NewUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:scaleType="centerInside"
            android:src="@drawable/logo_a" />

        <LinearLayout
            android:layout_marginTop="@dimen/middle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_marginRight="@dimen/middle"
                    android:layout_weight="1"
                    android:background="@drawable/rect_color">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/sign_up"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/middle"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_weight="1"
                    android:background="@drawable/rect_trans_with_white_border">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/log_in"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_weight="1"
                    android:background="@drawable/line">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:alpha="0.35"
                        android:text="@string/or"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_weight="1"
                    android:background="@drawable/line">

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_marginTop="@dimen/middle"
                    android:layout_weight="1"
                    android:background="@drawable/rect_gpcolor">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:padding="3dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/middle"
                            android:src="@drawable/google_plus" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/cont_gp"
                            android:textColor="@color/white" />

                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_marginTop="@dimen/middle"
                    android:layout_weight="1"
                    android:background="@drawable/rect_fbcolor">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:padding="3dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/middle"
                            android:src="@drawable/facebook" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/cont_fb"
                            android:textColor="@color/white" />

                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_marginTop="@dimen/middle"
                    android:layout_weight="1"
                    android:background="@drawable/rect_twcolor">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:padding="3dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/middle"
                            android:src="@drawable/twitter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/cont_tw"
                            android:textColor="@color/white" />

                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_marginTop="@dimen/middle"
                    android:layout_weight="1"
                    android:background="@drawable/rect_vkcolor">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:padding="3dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/middle"
                            android:src="@drawable/vk" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/cont_vk"
                            android:textColor="@color/white" />

                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle"
                android:gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/any"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
