<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.placelook.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_marginTop="@dimen/big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cardView:cardElevation="@dimen/small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/ivEmail"
                    android:layout_marginLeft="@dimen/small"
                    android:layout_width="@dimen/xbig"
                    android:layout_height="@dimen/xbig"
                    app:srcCompat="@drawable/ic_email_black" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivEmail">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:hint="@string/hithEmail"
                        android:inputType="textEmailAddress|textEmailSubject" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/small"
                    android:id="@+id/ivPassword"
                    android:layout_width="@dimen/xbig"
                    android:layout_height="@dimen/xbig"
                    app:srcCompat="@drawable/ic_lock_black" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivPassword">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:hint="@string/hithPassword"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginLeft="@dimen/xlarge"
                    android:layout_marginRight="@dimen/xlarge"
                    android:layout_marginTop="@dimen/big"
                    android:background="@drawable/rect_color">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/log_in"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/forgot_password" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/middle"></RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_marginTop="@dimen/xlarge"
        android:layout_below="@id/cardLogin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="@dimen/middle"
                android:layout_weight="1"
                android:background="@drawable/rect_gpcolor">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:src="@drawable/google_plus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/viaGooglePlus"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="@dimen/middle"
                android:layout_weight="1"
                android:background="@drawable/rect_fbcolor">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:src="@drawable/facebook" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/viaFacebook"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="@dimen/middle"
                android:layout_weight="1"
                android:background="@drawable/rect_twcolor">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:src="@drawable/twitter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/viaTwitter"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_marginTop="@dimen/middle"
                android:layout_weight="1"
                android:background="@drawable/rect_vkcolor">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small"
                        android:src="@drawable/vk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/viaVKontakte"
                        android:textColor="@color/white" />

                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
