<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.placelook.fragments.operator.PrevOperatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/sinevir"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/big"
        android:background="@color/black"
        android:paddingLeft="@dimen/small"
        android:paddingRight="@dimen/small">

        <RelativeLayout
            android:id="@+id/rlLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="@dimen/middle"
                android:layout_height="wrap_content"
                android:src="@drawable/gps_on_off" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvTextLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/small"
            android:layout_toRightOf="@id/rlLocation"
            android:text="@string/pleaseTurnOnGPS"
            android:textColor="@color/light_gray" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/tvManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/small"
                android:text="x3"
                android:textColor="@color/light_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/tvManual"
                android:src="@drawable/ic_trending_up_white" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/red"
        android:orientation="vertical"
        android:paddingLeft="@dimen/big"
        android:paddingRight="@dimen/big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/whereareyou"
                    android:textColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <!--
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left|center_vertical"
                                    android:text="@string/pleaseTurnOnGPS"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/large_font" />
                -->
                <android.support.design.widget.TextInputLayout
                    android:layout_gravity="left|center_vertical"
                    android:textColorHint="@color/grey"
                    android:textColorHighlight="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edTourName"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_font"
                        android:background="#00000000"
                        android:gravity="bottom"
                        android:hint="@string/please_enter_name"
                        android:paddingLeft="@dimen/tiny"
                        android:paddingTop="@dimen/small"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tiny"
            android:background="@color/grey"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivBlackLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small"
                            android:layout_marginRight="@dimen/small"
                            android:src="@drawable/black_gps" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivBlack3G"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small"
                            android:layout_marginRight="@dimen/small"
                            android:src="@drawable/black_3g" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivBlackWiFi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/small"
                            android:layout_marginRight="@dimen/small"
                            android:src="@drawable/black_wifi" />

                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rlStart"
                    android:enabled="false"
                    android:clickable="true"
                    android:background="@drawable/rect_button"
                    android:layout_centerInParent="true"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/large">

                    <TextView
                        android:id="@+id/tvStart"
                        android:layout_centerInParent="true"
                        android:clickable="true"
                        android:text="@string/big_start"
                        android:textColor="@color/black_white"
                        android:textSize="@dimen/normal_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
